Japanese, German, Spanish translations, version 0.9.5

--- a/gnonograms-java/THANKS
+++ b/gnonograms-java/THANKS
@@ -1,3 +1,8 @@
+Translation:
+Japanese - Hiroko Wootten <hirokowootten@gmail.com>
+German   - chrysn <chrysn@fsfe.org>
+Spanish  - Federico Vera <dtkcoding@gmail.com>
+Testing:
 Hiroko Wootten <hirokowootten@gmail.com>
 
 Projects:
