--- a/gnonograms-java/res/i18n/GnonogramsText_de.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_de.properties
@@ -1,22 +1,27 @@
 # This is the German Gnonograms translation file (NEEDS CHECKING!)
 #TITLES
 Gnonograms\ for\ Java=Gnonograms für Java
-Edit\ Game=Edit Game
+Edit\ Game=Puzzle _bearbeiten
 #LABELS
+Image=Bild
+Random=zufällig
+Computer=Computer
+GPL=GPL
+Today=Heute
 Name=Name
-Source=Source
-(C)=(C)
-Created=Created
-Size=Size
-Score=Score
-Time=Time
-Information=Information
-Row\ Clues=Row Clues
-Column\ Clues=Column Clues
-Name\ of\ Puzzle=Name of Puzzle
-Author\ or\ Source=Author or Source
-Date\ of\ Creation=Date of Creation
-License\ or\ copyright=License or copyright
+Source=Quelle
+(C)=©
+Created=Datum
+Size=Größe
+Score=Punktestand
+Time=Zeit
+Information=Informationen
+Row\ Clues=Hinweise in Zeilen
+Column\ Clues=Hinweise in Spalten
+Name\ of\ Puzzle=Name des Puzzle
+Author\ or\ Source=Autor oder Quelle
+Date\ of\ Creation=Erstellungsdatum
+License\ or\ copyright=Lizenz oder Copyright
 #TOOLTIPS
 Set\ number\ of\ rows=Zeilen
 Set\ number\ of\ columns=Spalten
@@ -52,10 +57,10 @@ White\ Background=Weißer Hintergrund
 Do\ not\ invert\ Black\ and\ White=Bild nicht invertieren
 Invert\ Black\ and\ White=Bild invertieren
 Lock\ Aspect\ Ratio=Seitenverhältnis sperren
-Red\ Threshold=Red Threshold
-Blue\ Threshold=Blue Threshold
-Green\ Threshold=Green Threshold
-Alpha\ Threshold=Alpha Threshold
+Red\ Threshold=Rot Schwellenpegel
+Blue\ Threshold=Blau Schwellenpegel
+Green\ Threshold=Grün Schwellenpegel
+Alpha\ Threshold=Alpha Schwellenpegel
 #MESSAGES
 Changing\ the\ locale\ will\ start\ a\ new\ game\ -\ Continue?=Änderung des Gebietsschemas wird ein neues Spiel starten - Weiter?
 There\ are\ no\ errors=Es gibt keine Fehler
@@ -68,8 +73,13 @@ Congratulations=Glückwunsch!
 you\ have\ found\ an\ alternative\ solution=Sie haben eine alternative Lösung gefunden
 you\ have\ solved\ the\ puzzle=Sie haben das Rätsel gelöst
 Sorry\ -\ you\ have\ made\ a\ mistake=Sorry - Sie haben einen Fehler gemacht
+Go\ back\ to\ last\ correct\ position?=Rückgängig zurück zum letzten richtigen Position?
 Image\ File\ not\ found=Bilddatei nicht gefunden
 An\ error\ occurred\ opening\ the\ image\ file=Problem beim Lesen der Bilddatei
+A\ logical\ error\ has\ already\ been\ made\ -\ cannot\ hint=Es wurde bereits ein Fehler gemacht, Hinweis nicht möglich
+Already\ solved=Bereits gelöst
+Cannot find\ hint=konnte keinen Hinweis finden
+Choose\ a\ simple\ image\ to\ convert=Wählen Sie ein Bild zum Konvertieren
 #HELP
 Version=Version
 KEY\ CONTROLS=Schlüsselkontrollen
@@ -97,13 +107,13 @@ mark\ selected\ cell\ empty=mark ausgewählte Zelle als leer
 mark\ selected\ cell\ unknown=mark ausgewählten Zelle als unbekannt
 increase\ size\ of\ cells=erhöhen die Größe der Zellen
 decrease\ size\ of\ cells=verringern die Größe der Zellen
-Save\ the\ puzzle=Speichern unter…
+Save\ the\ puzzle=speichern unter…
 Open\ a\ puzzle=Puzzle öffnen
 Design\ a\ puzzle=Puzzle entwerfen
-generate\ a\ Random\ puzzle=Zufälliges Puzzle erzeugen
-Undo\ last\ move=Rückgängig
-Redo\ undone\ move=Wiederholen
+generate\ a\ Random\ puzzle=zufälliges Puzzle erzeugen
+Undo\ last\ move=rückgängig
+Redo\ undone\ move=wiederholen
 get\ Hint\ when\ solving=Hinweis anzeigen
-Mark\ cell\ under\ cursor=Bookmark der Zelle unter dem Cursor
+Mark\ cell\ under\ cursor=bookmark der Zelle unter dem Cursor
 backtrack\ to\ Last\ marked\ cell=zurück zur Zelle mit Lesezeichen
-Quit=Beenden
+Quit=beenden
