--- a/gnonograms-java/res/i18n/GnonogramsText_en_gb.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_en_gb.properties
@@ -3,6 +3,11 @@
 Gnonograms\ for\ Java=Gnonograms for Java
 Edit\ Game=Edit Game
 #LABELS
+Image=Image
+Random=Random
+Computer=Computer
+GPL=GPL
+Today=Today
 Name=Name
 Source=Source
 (C)=(C)
@@ -71,6 +76,10 @@ Sorry\ -\ you\ have\ made\ a\ mistake=Sorry - you have made a mistake
 Go\ back\ to\ last\ correct\ position?=Go back to last correct position?
 Image\ File\ not\ found=Image File not found
 An\ error\ occurred\ opening\ the\ image\ file=An error occurred opening the image file
+A\ logical\ error\ has\ already\ been\ made\ -\ cannot\ hint=A logical error has already been made - cannot hint
+Already\ solved=Already solved
+Cannot\ find\ hint=Cannot find hint
+Choose\ a\ simple\ image\ to\ convert=Choose a simple image to convert
 #HELP
 Version=Version
 KEY\ CONTROLS=KEY CONTROLS
@@ -81,16 +90,16 @@ E\ or\ e=E or e
 X\ or\ x=X or x
 +\ or\ \= =+ or =
 -\ or\ _=- or _
-Ctrl\ S=Ctrl S
-Ctrl\ O=Ctrl O
-Ctrl\ N=Ctrl N
-Ctrl\ R=Ctrl R
-Ctrl\ U=Ctrl U
-Ctrl\ Y=Ctrl Y
-Ctrl\ H=Ctrl H
-Ctrl\ M=Ctrl M
-Ctrl\ L=Ctrl L
-Ctrl\ Q=Ctrl Q
+Ctrl\ S=Ctrl+S
+Ctrl\ O=Ctrl+O
+Ctrl\ N=Ctrl+N
+Ctrl\ R=Ctrl+R
+Ctrl\ U=Ctrl+U
+Ctrl\ Y=Ctrl+Y
+Ctrl\ H=Ctrl+H
+Ctrl\ M=Ctrl+M
+Ctrl\ L=Ctrl+L
+Ctrl\ Q=Ctrl+Q
 move\ cell\ selection\ cursor=move cell selection cursor
 drag\ cell\ selection\ cursor=drag cell selection cursor
 mark\ selected\ cell\ full=mark selected cell full
@@ -105,6 +114,6 @@ generate\ a\ Random\ puzzle=generate a Random puzzle
 Undo\ last\ move=Undo last move
 Redo\ undone\ move=Redo undone move
 get\ Hint\ when\ solving=get Hint when solving
-Mark\ cell\ under\ cursor=Mark cell under cursor
+Mark\ cell\ under\ cursor=bookMark cell under cursor
 backtrack\ to\ Last\ marked\ cell=backtrack to Last marked cell
-Quit=Quit(GB)
+Quit=Exit the program
