--- a/gnonograms-java/res/i18n/GnonogramsText_en_us.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_en_us.properties
@@ -3,6 +3,11 @@
 Gnonograms\ for\ Java=Gnonograms for Java
 Edit\ Game=Edit Game
 #LABELS
+Image=Image
+Random=Random
+Computer=Computer
+GPL=GPL
+Today=Today
 Name=Name
 Source=Source
 (C)=(C)
@@ -51,7 +56,7 @@ Black\ Background=Black Background
 White\ Background=White Background
 Do\ not\ invert\ Black\ and\ White=Do not invert Black and White
 Invert\ Black\ and\ White=Invert Black and White
-Lock\ Aspect\ Ratio=Lock Aspect Ratio
+Lock\ Aspect\ Ratio=Lock aspect ratio
 Red\ Threshold=Red Threshold
 Blue\ Threshold=Blue Threshold
 Green\ Threshold=Green Threshold
@@ -65,32 +70,36 @@ Exception=Exception
 Not\ a\ valid\ game\ file=Not a valid game file
 Failed\ to\ generate\ puzzle\ -\ error\ in\ solver=Failed to generate puzzle - error in solver
 Congratulations=Congratulations
-you\ have\ found\ an\ alternative\ solution=you have found an alternative solution
-you\ have\ solved\ the\ puzzle=you have solved the puzzle
+you\ have\ found\ an\ alternative\ solution=You have found an alternative solution
+you\ have\ solved\ the\ puzzle=You have solved the puzzle
 Sorry\ -\ you\ have\ made\ a\ mistake=Sorry - you have made a mistake
 Go\ back\ to\ last\ correct\ position?=Go back to last correct position?
 Image\ File\ not\ found=Image File not found
 An\ error\ occurred\ opening\ the\ image\ file=An error occurred opening the image file
+A\ logical\ error\ has\ already\ been\ made\ -\ cannot\ hint=A logical error has already been made - cannot hint
+Already\ solved=Already solved
+Cannot\ find\ hint=Cannot find hint
+Choose\ a\ simple\ image\ to\ convert=Choose a simple image to convert
 #HELP
 Version=Version
 KEY\ CONTROLS=KEY CONTROLS
-Arrows=Arrows
-Ctrl+Arrows=Ctrl+Arrows
+Arrows=Arrows Keys
+Ctrl+Arrows=Ctrl+Arrows Keys
 F\ or\ f=F or f
 E\ or\ e=E or e
 X\ or\ x=X or x
 +\ or\ \= =+ or =
 -\ or\ _=- or _
-Ctrl\ S=Ctrl S
-Ctrl\ O=Ctrl O
-Ctrl\ N=Ctrl N
-Ctrl\ R=Ctrl R
-Ctrl\ U=Ctrl U
-Ctrl\ Y=Ctrl Y
-Ctrl\ H=Ctrl H
-Ctrl\ M=Ctrl M
-Ctrl\ L=Ctrl L
-Ctrl\ Q=Ctrl Q
+Ctrl\ S=Ctrl+S
+Ctrl\ O=Ctrl+O
+Ctrl\ N=Ctrl+N
+Ctrl\ R=Ctrl+R
+Ctrl\ U=Ctrl+U
+Ctrl\ Y=Ctrl+Y
+Ctrl\ H=Ctrl+H
+Ctrl\ M=Ctrl+M
+Ctrl\ L=Ctrl+L
+Ctrl\ Q=Ctrl+Q
 move\ cell\ selection\ cursor=move cell selection cursor
 drag\ cell\ selection\ cursor=drag cell selection cursor
 mark\ selected\ cell\ full=mark selected cell full
@@ -98,13 +107,13 @@ mark\ selected\ cell\ empty=mark selected cell empty
 mark\ selected\ cell\ unknown=mark selected cell unknown
 increase\ size\ of\ cells=increase size of cells
 decrease\ size\ of\ cells=decrease size of cells
-Save\ the\ puzzle=Save the puzzle
-Open\ a\ puzzle=Open a puzzle
-Design\ a\ puzzle=Design a puzzle
+Save\ the\ puzzle=save the puzzle
+Open\ a\ puzzle=open a puzzle
+Design\ a\ puzzle=design a puzzle
 generate\ a\ Random\ puzzle=generate a Random puzzle
-Undo\ last\ move=Undo last move
-Redo\ undone\ move=Redo undone move
+Undo\ last\ move=undo last move
+Redo\ undone\ move=redo undone move
 get\ Hint\ when\ solving=get Hint when solving
-Mark\ cell\ under\ cursor=Mark cell under cursor
+Mark\ cell\ under\ cursor=mark cell under cursor
 backtrack\ to\ Last\ marked\ cell=backtrack to Last marked cell
-Quit=Quit(US)
+Quit=Quit
