--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -1,7 +1,8 @@
-Gnonograms-java - version 0.9.1
+Gnonograms-java - version 0.9.5
 *******************************
 Oct 20, 2012  Internationalistion infrastructure added
 Nov 03, 2012  Partial translation into Japanese and German
+Nov 12, 2012  Completed draft translation into Japanese, German and Spanish (some machine translation)
 
 Gnonograms-java - version 0.9.0
 *******************************
