--- a/gnonograms-java/README
+++ b/gnonograms-java/README
@@ -5,7 +5,7 @@
   * Introduction
    Gnonograms-java is an implementation in Java of the Japanese logic puzzle "Nonograms",   also known as "Tsunami", "Griddlers" .....". The object of the game is to discover the pattern in the grid which is encoded by the clues which are give for each row and column. Each clue is a series of numbers which represent blocks of filled in cells in the corresponding row or column.  Each number indicates how many cells are in the block it represents.  Each block must be separated by at least one empty cell from neighbouring blocks.  The order of the numbers in the clue shows the order in which the blocks appear in the row or column.
 
-  * Main Features (version 0.4)
+  * Features (from version 0.4)
     * Design nonogram puzzles manually by painting
     * Automatically generate simple (unambiguous) puzzles
     * Solve puzzles manually
@@ -15,22 +15,21 @@
     * Save puzzles and partially completed puzzles
     * Handles puzzle grids up to 50 X 50 (practical limit depends on screen size)
 
-  * New features for version 0.6
+  * (from version 0.6)
     * Persistent preferences
     * Go back to last correct position
     * Timer
     * Can choose whether program starts with randomly generated puzzle, or design mode, or load puzzle dialog
     
-  * New features for version 0.7
+  * (from version 0.7)
     * Advanced solver - can solve most puzzles
     * Advanced puzzle generation with higher grade settings
     * Get hint function (press Ctrl-H when solving)
-    * Larger maximum grid size - up to 100x100
 
-  * More advanced features are currently only available in the GTK version:
+  * (from version 0.9):
     * Import puzzle from image
+    * Localization. Translations into Japanese, German and Spanish.
     * Mark cell and rewind to marked cell
-    * Built in Manual
     
   * Installation & Licensing
 
