--- a/gnonograms-java/res/i18n/GnonogramsText.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText.properties
@@ -3,6 +3,11 @@
 Gnonograms\ for\ Java=Gnonograms for Java
 Edit\ Game=Edit Game
 #LABELS
+Image=Image
+Random=Random
+Computer=Computer
+GPL=GPL
+Today=Today
 Name=Name
 Source=Source
 (C)=(C)
@@ -71,6 +76,10 @@ Sorry\ -\ you\ have\ made\ a\ mistake=Sorry - you have made a mistake
 Go\ back\ to\ last\ correct\ position?=Go back to last correct position?
 Image\ File\ not\ found=Image File not found
 An\ error\ occurred\ opening\ the\ image\ file=An error occurred opening the image file
+A\ logical\ error\ has\ already\ been\ made\ -\ cannot\ hint=A logical error has already been made - cannot hint
+Already\ solved=Already solved
+Cannot\ find\ hint=Cannot find hint
+Choose\ a\ simple\ image\ to\ convert=Choose a simple image to convert
 #HELP
 Version=Version
 KEY\ CONTROLS=KEY CONTROLS
@@ -107,4 +116,4 @@ Redo\ undone\ move=Redo undone move
 get\ Hint\ when\ solving=get Hint when solving
 Mark\ cell\ under\ cursor=Mark cell under cursor
 backtrack\ to\ Last\ marked\ cell=backtrack to Last marked cell
-Quit=Quitxxx
+Quit=Quit
