--- a/gnonograms-java/INSTALL
+++ b/gnonograms-java/INSTALL
@@ -16,5 +16,16 @@
   
   NOTE: This program has mainly been tested on Linux. It is confirmed to run on Windows 7 but has not been tested on other versions of Windows or on Apple computers.  However, as it uses only standard Java it should run on any machine with a suitable Java Runtime Engine.
 
+INSTALLATION FROM SOURCE ARCHIVE
+--------------------------------
 
+Extract the compressed source 
+Open terminal in the root directory (containing the Makefile)
+Enter "make jar"
+Proceed as above for installation from .jar
+
+Alternatively, to launch the program directly from the compiled code:
+
+Enter make
+Enter java -cp ./build gnonograms.Main
 
