--- a/gnonograms-java/res/i18n/GnonogramsText_de.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_de.properties
@@ -1,7 +1,8 @@
-# This is the German Gnonograms translation file (NEEDS CHECKING!)
+# This is the German Gnonograms translation file
+# Translator: Chrysn <chrysn@fsfe.org>
 #TITLES
 Gnonograms\ for\ Java=Gnonograms für Java
-Edit\ Game=Puzzle _bearbeiten
+Edit\ Game=Puzzle bearbeiten
 #LABELS
 Image=Bild
 Random=zufällig
@@ -18,16 +19,16 @@ Time=Zeit
 Information=Informationen
 Row\ Clues=Hinweise in Zeilen
 Column\ Clues=Hinweise in Spalten
-Name\ of\ Puzzle=Name des Puzzle
+Name\ of\ Puzzle=Name des Puzzles
 Author\ or\ Source=Autor oder Quelle
 Date\ of\ Creation=Erstellungsdatum
 License\ or\ copyright=Lizenz oder Copyright
 #TOOLTIPS
-Set\ number\ of\ rows=Zeilen
-Set\ number\ of\ columns=Spalten
-Set\ size\ of\ font=Schrift
+Set\ number\ of\ rows=Zeilenanzahl
+Set\ number\ of\ columns=Spaltenanzahl
+Set\ size\ of\ font=Schriftgröße
 Set\ difficulty\ of\ puzzles=Schwierigkeitsgrad
-Set\ state\ on\ startup=Staat auf Start
+Set\ state\ on\ startup=Startzustand
 Language=Sprache
 Start\ with\ random\ puzzle=Zufälliges Puzzle erzeugen
 Start\ in\ design\ mode=Erstellen
@@ -43,46 +44,47 @@ Undo\ move=Rückgängig
 Redo\ move=Wiederholen
 Start\ solving\ this\ puzzle\ again=Puzzle neu starten
 Let\ the\ computer\ try\ to\ solve\ the\ puzzle=Durch den Computer lösen lassen
-Check\ for\ mistakes=Nachsehen
+Check\ for\ mistakes=Auf Fehler prüfen
 Generate\ a\ random\ puzzle=Zufälliges Puzzle erzeugen
-Hide\ the\ solution=Lösung verstecken und Spiel fortsetzen
+Hide\ the\ solution=Lösung verstecken
 Hide\ the\ solution\ and\ start\ solving=Lösung verstecken und Spiel fortsetzen
 Edit\ preferences=Einstellungen
 Make\ the\ font\ smaller=Schrift kleiner
 Make\ the\ font\ larger=Schrift größer
 Credits\ and\ keyboard\ shortcuts=Über Gnonograms
-Convert\ Image=Wandelt Bilder
+Convert\ Image=Bild umwandeln
 Black\ Background=Schwarzer Hintergrund
 White\ Background=Weißer Hintergrund
 Do\ not\ invert\ Black\ and\ White=Bild nicht invertieren
 Invert\ Black\ and\ White=Bild invertieren
 Lock\ Aspect\ Ratio=Seitenverhältnis sperren
-Red\ Threshold=Rot Schwellenpegel
-Blue\ Threshold=Blau Schwellenpegel
-Green\ Threshold=Grün Schwellenpegel
-Alpha\ Threshold=Alpha Schwellenpegel
+Red\ Threshold=Rot Schwellwert
+Blue\ Threshold=Blau Schwellwert
+Green\ Threshold=Grün Schwellwert
+Alpha\ Threshold=Alpha Schwellwert
 #MESSAGES
 Changing\ the\ locale\ will\ start\ a\ new\ game\ -\ Continue?=Änderung des Gebietsschemas wird ein neues Spiel starten - Weiter?
+Changing\ the\ size\ will\ start\ a\ new\ game\ -\ Continue?=Änderung der Größe wird ein neues Spiel starten - Weiter?
 There\ are\ no\ errors=Es gibt keine Fehler
 Number\ of\ errors=Anzahl der Fehler
 Go\ back\ to\ the\ last\ correct\ position?=Zurück zum letzten richtigen Position?
 Exception=Fehler
 Not\ a\ valid\ game\ file=Ungültiges Dateiformat
-Failed\ to\ generate\ puzzle\ -\ error\ in\ solver=Kann nicht generiert ein Puzzle - Fehler in Solver
+Failed\ to\ generate\ puzzle\ -\ error\ in\ solver=Puzzle kann nicht generiert ein - Fehler in Solver
 Congratulations=Glückwunsch!
 you\ have\ found\ an\ alternative\ solution=Sie haben eine alternative Lösung gefunden
 you\ have\ solved\ the\ puzzle=Sie haben das Rätsel gelöst
 Sorry\ -\ you\ have\ made\ a\ mistake=Sorry - Sie haben einen Fehler gemacht
-Go\ back\ to\ last\ correct\ position?=Rückgängig zurück zum letzten richtigen Position?
+Go\ back\ to\ last\ correct\ position?=Zurückgehen zum letzten richtigen Stand?
 Image\ File\ not\ found=Bilddatei nicht gefunden
 An\ error\ occurred\ opening\ the\ image\ file=Problem beim Lesen der Bilddatei
 A\ logical\ error\ has\ already\ been\ made\ -\ cannot\ hint=Es wurde bereits ein Fehler gemacht, Hinweis nicht möglich
 Already\ solved=Bereits gelöst
-Cannot find\ hint=konnte keinen Hinweis finden
-Choose\ a\ simple\ image\ to\ convert=Wählen Sie ein Bild zum Konvertieren
+Cannot find\ hint=Konnte keinen Hinweis finden
+Choose\ a\ simple\ image\ to\ convert=Wählen Sie ein einfaches Bild zum Konvertieren
 #HELP
 Version=Version
-KEY\ CONTROLS=Schlüsselkontrollen
+KEY\ CONTROLS=Schlüssel / Steuerung
 Arrows=Pfeiltasten
 Ctrl+Arrows=Strg + Pfeiltasten
 F\ or\ f=F oder f
@@ -100,20 +102,20 @@ Ctrl\ H=Strg + H
 Ctrl\ M=Strg + M
 Ctrl\ L=Strg + L
 Ctrl\ Q=Strg + Q
-move\ cell\ selection\ cursor=bewegen Zelle Auswahlcursor
-drag\ cell\ selection\ cursor=ziehen Zelle Auswahlcursor
-mark\ selected\ cell\ full=mark ausgewählte Zelle als voller
-mark\ selected\ cell\ empty=mark ausgewählte Zelle als leer
-mark\ selected\ cell\ unknown=mark ausgewählten Zelle als unbekannt
-increase\ size\ of\ cells=erhöhen die Größe der Zellen
-decrease\ size\ of\ cells=verringern die Größe der Zellen
-Save\ the\ puzzle=speichern unter…
+move\ cell\ selection\ cursor=Zell-Cursor bewegen
+drag\ cell\ selection\ cursor=Zell-Cursor ziehen
+mark\ selected\ cell\ full=Zelle als voll markieren
+mark\ selected\ cell\ empty=Zelle als leer markieren
+mark\ selected\ cell\ unknown=Zelle als unbekannt markieren
+increase\ size\ of\ cells=Zellgröße erhöhen
+decrease\ size\ of\ cells=Zellgröße reduzieren
+Save\ the\ puzzle=Puzzle speichern unter…
 Open\ a\ puzzle=Puzzle öffnen
 Design\ a\ puzzle=Puzzle entwerfen
 generate\ a\ Random\ puzzle=zufälliges Puzzle erzeugen
 Undo\ last\ move=rückgängig
 Redo\ undone\ move=wiederholen
 get\ Hint\ when\ solving=Hinweis anzeigen
-Mark\ cell\ under\ cursor=bookmark der Zelle unter dem Cursor
-backtrack\ to\ Last\ marked\ cell=zurück zur Zelle mit Lesezeichen
+Mark\ cell\ under\ cursor=Zelle unter dem Cursor markieren
+backtrack\ to\ Last\ marked\ cell=zurück zur zuletzt markierten Zelle
 Quit=beenden
