--- a/gnonograms-java/res/i18n/GnonogramsText_es.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_es.properties
@@ -1,4 +1,5 @@
-# This is the default Gnonograms translation file
+# This is the Gnonograms Spanish translation file
+# Translator: Fido <dtkcoding@gmail.com>
 # TITLES
 Gnonograms\ for\ Java = Gnonograms para Java
 Edit\ Game = Editar Tablero
@@ -18,63 +19,64 @@ Time = Tiempo
 Information = Información
 Row\ Clues = Pistas de fila
 Column\ Clues = Pistas de columna
-Name\ of\ Puzzle = Nombre de Tablero
+Name\ of\ Puzzle = Nombre del tablero
 Author\ or\ Source = Autor o Fuente
 Date\ of\ Creation = Fecha de creación
-License\ or\ copyright = Licencia o derecho de autor
+License\ or\ copyright = Licencia o copyright
 # TOOLTIPS
-Set\ number\ of\ rows = Seleccionar el número de filas
-Set\ number\ of\ columns = Seleccionar el número de columnas
-Set\ size\ of\ font = Seleccionar el tamaño de la fuente
-Set\ difficulty\ of\ puzzles = Seleccionar la dificultad de los tableros
+Set\ number\ of\ rows = Seleccionar número de filas
+Set\ number\ of\ columns = Seleccionar número de columnas
+Set\ size\ of\ font = Seleccionar tamaño de la fuente
+Set\ difficulty\ of\ puzzles = Seleccionar dificultad de los tableros
 Set\ state\ on\ startup = Seleccionar el estado en el arranque
-Language = idioma
+Language = Idioma
 Start\ with\ random\ puzzle = Iniciar con tablero aleatorio
-Start\ in\ design\ mode = Iniciar en modo de diseño
+Start\ in\ design\ mode = Iniciar en modo diseño
 Start\ in\ file\ chooser = Iniciar en el selector de archivos
 Reveal\ the\ solution = Mostrar la solución
 Freedom = Libertad
 Draw\ your\ own\ puzzle\ grid = Dibuja tu propio tablero
-Convert\ an\ image\ to\ a\ puzzle = Convertir una imagen
-Edit\ the\ description\ and\ clues = Edite la descripción y pistas
+Convert\ an\ image\ to\ a\ puzzle = Convertir una imagen en tablero
+Edit\ the\ description\ and\ clues = Edite la descripción y las pistas
 Load\ a\ puzzle\ from\ file = Cargar un tablero
 Save\ the\ puzzle\ to\ file = Guarda el tablero
 Undo\ move = Deshacer último movimiento
 Redo\ move = Rehacer último movimiento deshecho
 Start\ solving\ this\ puzzle\ again = Reiniciar resolviendo el tablero
-Let\ the\ computer\ try\ to\ solve\ the\ puzzle = Dejar que la computadora lo resuelva
+Let\ the\ computer\ try\ to\ solve\ the\ puzzle = Dejar que la computadora intente resolverlo
 Check\ for\ mistakes = Compruebe si hay errores
 Generate\ a\ random\ puzzle = Generar tablero aleatorio
-Hide\ the\ solution = Esconder la solución
-Hide\ the\ solution\ and\ start\ solving = Esconder la solución y comenzar a resolver
+Hide\ the\ solution = Ocultar la solución
+Hide\ the\ solution\ and\ start\ solving = Ocultar la solución y comenzar a resolver
 Edit\ preferences = Editar preferencias
 Make\ the\ font\ smaller = Disminuir el tamaño de letra
 Make\ the\ font\ larger = Aumentar el tamaño de letra
 Credits\ and\ keyboard\ shortcuts = Créditos y atajos de teclado
-Convert\ Image = Convertir la imagen
+Convert\ Image = Convertir imagen
 Black\ Background = Fondo negro
 White\ Background = Fondo blanco
-Do\ not\ invert\ Black\ and\ White = No invierta Blanco y Negro
-Invert\ Black\ and\ White = Invertir Blanco y Negro
+Do\ not\ invert\ Black\ and\ White = No invertir blanco y negro
+Invert\ Black\ and\ White = Invertir nlanco y negro
 Lock\ Aspect\ Ratio = Bloquear relación de aspecto
-Red\ Threshold = Umbral Red
+Red\ Threshold = Umbral Rojo
 Blue\ Threshold = Umbral Azul
 Green\ Threshold = Umbral Verde
 Alpha\ Threshold = Umbral Alfa 
 # MESSAGES
 Changing\ the\ locale\ will\ start\ a\ new\ game\ -\ Continue? = Cambiar la configuración regional comenzará un nuevo juego - ¿Continuar?
+Changing\ the\ size\ will\ start\ a\ new\ game\ -\ Continue?=Cambiar el tamaño comenzará un nuevo juego - ¿Continuar?
 There\ are\ no\ errors = No hay errores
 Number\ of\ errors = Número de errores
-Go\ back\ to\ the\ last\ correct\ position? = Vuelva a la posición correcta pasado?
+Go\ back\ to\ the\ last\ correct\ position? = Volver a la última posición correcta?
 Exception = Excepción
-Not\ a\ valid\ game\ file = No es un archivo válido
+Not\ a\ valid\ game\ file = No es un archivo de juego válido
 Failed\ to\ generate\ puzzle\ -\ error\ in\ solver = Error al resolver - No se pudo generar tablero
 Congratulations = ¡Felicitaciones!
 you\ have\ found\ an\ alternative\ solution = Encontró una solución alternativa
 you\ have\ solved\ the\ puzzle = Resolvió el tablero
-Sorry\ -\ you\ have\ made\ a\ mistake = Lo siento - se han cometido un error
-Go\ back\ to\ last\ correct\ position? = Volver a la posición correcta pasado?
-Image\ File\ not\ found = El fichero de imagen no se encuentra
+Sorry\ -\ you\ have\ made\ a\ mistake = Lo siento - ha cometido un error
+Go\ back\ to\ last\ correct\ position? = Volver a la última posición correcta?
+Image\ File\ not\ found = El archivo de imagen no fue encontrado
 An\ error\ occurred\ opening\ the\ image\ file = Se produjo un error al abrir el archivo de imagen
 A\ logical\ error\ has\ already\ been\ made\ -\ cannot\ hint = Ya se a encontrado un error lógico - no se puede ayudar
 Already\ solved = Ya está resuelto
@@ -83,8 +85,8 @@ Choose\ a\ simple\ image\ to\ convert = Elija una imagen simple para convertir
 # HELP
 Version = Versión
 KEY\ CONTROLS = TECLAS DE CONTROL
-Arrows = Teclas de flechas
-Ctrl+Arrows = Ctrl + Teclas de flechas
+Arrows = Flechas
+Ctrl+Arrows = Ctrl + Flechas
 F\ or\ f = F o f
 E\ or\ e = E o e
 X\ or\ x = X o x
@@ -103,17 +105,17 @@ Ctrl\ Q = Ctrl+Q
 move\ cell\ selection\ cursor = mover el cursor de selección de celdas
 drag\ cell\ selection\ cursor = arrastrar el cursor de selección de celdas
 mark\ selected\ cell\ full = marca seleccionada célula completa
-mark\ selected\ cell\ empty = marcar la celda seleccionada como vacío
-mark\ selected\ cell\ unknown = marcar la celda seleccionada como desconocido
+mark\ selected\ cell\ empty = marcar la celda seleccionada como vacía
+mark\ selected\ cell\ unknown = marcar la celda seleccionada como desconocida
 increase\ size\ of\ cells = aumentar el tamaño de las celdas
 decrease\ size\ of\ cells = disminuir el tamaño de las celdas
-Save\ the\ puzzle = guarda el tablero
-Open\ a\ puzzle = abra un tablero
-Design\ a\ puzzle = diseño de un tablero
-generate\ a\ Random\ puzzle = generar un tablero al azar
-Undo\ last\ move = deshacer el último movimiento
-Redo\ undone\ move = rehacer movimiento deshecho
-get\ Hint\ when\ solving = obtener pista
-Mark\ cell\ under\ cursor = señalar la celda bajo el cursor
-backtrack\ to\ Last\ marked\ cell = dar marcha atrás a la última celda marcada
-Quit = salir
+Save\ the\ puzzle = Guardar el tablero
+Open\ a\ puzzle = Abrir un tablero
+Design\ a\ puzzle = Diseñar un tablero
+generate\ a\ Random\ puzzle = generar un tablero al aleatorio
+Undo\ last\ move = Deshacer el último movimiento
+Redo\ undone\ move = Rehacer movimiento deshecho
+get\ Hint\ when\ solving = obtener pistas al resolver
+Mark\ cell\ under\ cursor = Señalar la celda bajo el cursor
+backtrack\ to\ Last\ marked\ cell = volver a la última celda marcada
+Quit = Salir
