--- a/gnonograms-java/res/i18n/GnonogramsText_ja.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_ja.properties
@@ -63,6 +63,7 @@ Green\ Threshold = 緑のしきい値
 Alpha\ Threshold = アルファのしきい値
 # MESSAGES
 Changing\ the\ locale\ will\ start\ a\ new\ game\ -\ Continue? = ロケールを変更すると、新しいゲームを開始します - 続行しますか
+Changing\ the\ size\ will\ start\ a\ new\ game\ -\ Continue? = サイズを変更すると、新しいゲームを開始します - 続行しますか
 There\ are\ no\ errors = エラー無し
 Number\ of\ errors = エラー回数
 Go\ back\ to\ the\ last\ correct\ position? = 最後の正しい位置に戻りますか
