--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -3,6 +3,7 @@ Gnonograms-java - version 0.9.5
 Oct 20, 2012  Internationalistion infrastructure added
 Nov 03, 2012  Partial translation into Japanese and German
 Nov 12, 2012  Completed draft translation into Japanese, German and Spanish (some machine translation)
+Dec 12, 2012  Finalised translations (thanks to Hiroko, Fido and Chrysn)
 
 Gnonograms-java - version 0.9.0
 *******************************
