--- a/gnonograms-java/res/i18n/GnonogramsText_en_us.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_en_us.properties
@@ -63,6 +63,7 @@ Green\ Threshold=Green Threshold
 Alpha\ Threshold=Alpha Threshold
 #MESSAGES
 Changing\ the\ locale\ will\ start\ a\ new\ game\ -\ Continue?=Changing the locale will start a new game - Continue?
+Changing\ the\ size\ will\ start\ a\ new\ game\ -\ Continue?=Changing the size will start a new game - Continue?
 There\ are\ no\ errors=There are no errors
 Number\ of\ errors=Number of errors
 Go\ back\ to\ the\ last\ correct\ position?=Go back to the last correct position?
