--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -1,9 +1,19 @@
+Gnonograms-java - version 0.9.6
+*********************************
+Dec 15, 2012  Implemented advanced settings, giving finer control over some layout and game generator properties without recompiling
+
+Gnonograms-java - version 0.9.5.1
+*********************************
+Dec 12, 2012  Bug-fix - clues truncated under Windows.
+Dec 13, 2012  Switched hide/reveal icons - toggle button icon now reflects game state rather than button action.
+Dec 15, 2012  Inhibit saving invalid solutions
+
 Gnonograms-java - version 0.9.5
 *******************************
 Oct 20, 2012  Internationalistion infrastructure added
 Nov 03, 2012  Partial translation into Japanese and German
 Nov 12, 2012  Completed draft translation into Japanese, German and Spanish (some machine translation)
-Dec 12, 2012  Finalised translations (thanks to Hiroko, Fido and Chrysn)
+Dec 10, 2012  Finalised translations (thanks to Hiroko, Fido and Chrysn)
 
 Gnonograms-java - version 0.9.0
 *******************************
