--- a/gnonograms-gtk3/NEWS
+++ b/gnonograms-gtk3/NEWS
@@ -1,3 +1,9 @@
+Gnonograms3 - version 0.9.9.1
+*****************************
+30/Dec/2012  Rewind to last correct position after check for errors
+             Do not generate ambiguous advanced games
+             Remember last load game directory
+
 Gnonograms3 - version 0.9.9
 ***************************
 24/Dec/2012  Remove deprecated code.  Change to Vala version 0.16
