Java version: Added French translation               Bugfixes in image importer and solver               Inhibit check grid when cell is marked               Version bumped to 0.9.7               Update gnonogram icons Gtk version:  Inhibit checkgrid when cell is marked               Update gnonogram icons Win32 version: Experimental changes - currently not working

--- a/gnonograms-java/res/i18n/supported_languages.xml
+++ b/gnonograms-java/res/i18n/supported_languages.xml
@@ -6,4 +6,5 @@
 <entry key="de">German</entry>
 <entry key="es">Spanish</entry>
 <entry key="ja">Japanese</entry>
+<entry key="fr">French</entry>
 </properties>
