--- a/gnonograms-java/NEWS
+++ b/gnonograms-java/NEWS
@@ -1,3 +1,10 @@
+Gnonograms-java - version 0.9.7
+*********************************
+Jan 19, 2013  French translation (thanks to Gwenael Allard)
+              Bugfix: lock aspect ratio in image importer
+              Bugfix: advanced solver inefficiency
+              Inhibit check grid when a cell is marked
+              Remove marked cell when switching out of solving mode
 Gnonograms-java - version 0.9.6
 *********************************
 Dec 15, 2012  Implemented advanced settings.
