Update News and Makefiles with new version number Include name and email of French translator

--- a/gnonograms-gtk2/NEWS
+++ b/gnonograms-gtk2/NEWS
@@ -1,3 +1,14 @@
+Gnonograms2 - version 0.9.9.2
+*****************************
+19/Jan/2013  Inhibit check grid tool when a cell is marked
+             Updated gnonogram icons
+
+Gnonograms2 - version 0.9.9.1
+*****************************
+30/Dec/2012  Rewind to last correct position after check for errors
+             Do not generate ambiguous advanced games
+             Remember last load game directory
+
 Gnonograms version 0.9.9
 **************************
 29/Dec/2012  Backported improvements from Java version including new solver
