--- a/gnonograms-gtk3/NEWS
+++ b/gnonograms-gtk3/NEWS
@@ -1,3 +1,8 @@
+Gnonograms3 - version 0.9.9.2
+*****************************
+19/Jan/2013  Inhibit check grid tool when a cell is marked
+             Updated gnonogram icons
+
 Gnonograms3 - version 0.9.9.1
 *****************************
 30/Dec/2012  Rewind to last correct position after check for errors
