--- a/gnonograms-java/THANKS
+++ b/gnonograms-java/THANKS
@@ -2,6 +2,7 @@ Translation:
 Japanese - Hiroko Wootten <hirokowootten@gmail.com>
 German   - chrysn <chrysn@fsfe.org>
 Spanish  - Federico Vera <dtkcoding@gmail.com>
+French - Gwenael Allard <gwenaelallard@eurofins.co.uk>
 Testing:
 Hiroko Wootten <hirokowootten@gmail.com>
 
