--- a/gnonograms-java/res/i18n/GnonogramsText_fr.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_fr.properties
@@ -1,4 +1,5 @@
-# This is the default Gnonograms translation file
+# This is the French Gnonograms translation file
+# Translator: Gwenael Allard <gwenaelallard@eurofins.co.uk>
 #TITLES
 Gnonograms\ for\ Java=Gnonograms pour Java
 Edit\ Game=Edition
