--- a/gnonograms-java/res/i18n/GnonogramsText_ja.properties
+++ b/gnonograms-java/res/i18n/GnonogramsText_ja.properties
@@ -1,4 +1,5 @@
-# This is the default Gnonograms translation file
+# This is the Japanese Gnonograms translation file
+#Translator: Hiroko Wootten <hirokowootten@gmail.com>
 # TITLES
 Gnonograms\ for\ Java = Java用Gnonograms
 Edit\ Game = ゲームを編集
